--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-create-conveyor",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "a state management for share, unite and debug react data easily",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
