--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-create-conveyor",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "a state management for share, unite and debug react data easily",
   "main": "src/index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/Archer03/react-create-conveyor.git"
   },
   "keywords": [
-    "react", "conveyor", "immer", "context", "hook", "state", "management"
+    "react", "conveyor", "immer", "context", "hook", "state", "management", "debug", "global"
   ],
   "author": "grant zheng",
   "license": "MIT",
