--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-create-conveyor",
-  "version": "1.3.2",
-  "description": "a state management for share, unite and debug react data easily",
+  "version": "1.3.3",
+  "description": "a react state management for share, unite and debug data easily",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/Archer03/react-create-conveyor.git"
   },
   "keywords": [
-    "react", "conveyor", "immer", "context", "hook", "state", "management", "debug", "global"
+    "react", "conveyor", "immer", "context", "hook", "state", "concurrent"
   ],
   "author": "grant zheng",
   "license": "MIT",
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Archer03/react-create-conveyor#readme",
   "dependencies": {
-    "immer": "^9.0.12"
+    "immer": "^9.0.12",
+    "use-sync-external-store": "^1.0.0"
   }
 }
