--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-create-conveyor",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "a react state management for share, unite and debug data easily",
   "main": "src/index.js",
   "scripts": {
@@ -22,5 +22,8 @@
   "dependencies": {
     "immer": "^9.0.12",
     "use-sync-external-store": "^1.0.0"
+  },
+  "peerDependencies": {
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   }
 }
