--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-create-conveyor",
-  "version": "1.3.4",
+  "version": "1.3.5",
   "description": "a react state management for share, unite and debug data easily",
   "main": "src/index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/Archer03/react-create-conveyor.git"
   },
   "keywords": [
-    "react", "conveyor", "immer", "context", "hook", "state", "concurrent"
+    "react", "conveyor", "immer", "context", "hook", "concurrent", "state", "state-management"
   ],
   "author": "grant zheng",
   "license": "MIT",
